--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -19,9 +19,9 @@
 }
 
 .form-actions button {
-  background: #5101d1;
+  background: #f05e5e;
   font: inherit;
-  border: 1px solid #5101d1;
+  border: 1px solid #f05e5e;
   border-radius: 3px;
   padding: 0.25rem 1rem;
   margin-right: 1rem;
@@ -32,6 +32,6 @@
 
 .form-actions button:hover,
 .form-actions button:active {
-    background: #6219d6;
-    border-color: #6219d6;
+    background: #f72424;
+    border-color: #f72424;
 }
